--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity
                 android:name=".activity.MainMenuActivity"
                 android:launchMode="singleTask"
-                android:theme="@style/CustomActionBarTheme">
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".activity.AddShopActivity"
