--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 
-
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -38,7 +37,9 @@
         </activity>
         <activity android:name=".activity.AddShopDoneActivity">
         </activity>
-        <activity android:name=".activity.ShopDetailActivity">
+        <activity
+                android:name=".activity.ShopDetailActivity"
+                android:theme="@style/CustomActionBarTheme">
         </activity>
 
         <meta-data
@@ -46,7 +47,7 @@
                 android:value="@string/google_map_apis_key"/>
         <meta-data
                 android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version" />
+                android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
